--- a/.github/workflows/main_cinehub.yml
+++ b/.github/workflows/main_cinehub.yml
@@ -40,21 +40,12 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
           name: .net-app
-      
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_C52935C41B864FBBB6CE89D0D011DB46 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_CFEBD4C783D84D16867F6779F37BFF81 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_58905438C45F49699FFB0204F85726EF }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -62,5 +53,5 @@ jobs:
         with:
           app-name: 'CineHub'
           slot-name: 'Production'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_5F00BC4B6B8D4276A24F1840976B610A }}
           package: .
-          
